--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 #
 # Copyright (C) 2019 CESNET.
 #
-# OArepo OpenID Connect is free software; you can redistribute it and/or modify it
+# Invenio OpenID Connect is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
 
 root = true
