--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 #
 # Copyright (C) 2019 CESNET.
 #
-# OArepo OpenID Connect is free software; you can redistribute it and/or modify it
+# Invenio OpenID Connect is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
 
 notifications:
@@ -69,5 +69,5 @@ deploy:
   on:
     tags: true
     python: "3.6"
-    repo: oarepo-openid-connect/oarepo-openid-connect
+    repo: CESNET/invenio-openid-connect
     condition: $DEPLOY = true
