--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 #
 # Copyright (C) 2019 CESNET.
 #
-# OArepo OpenID Connect is free software; you can redistribute it and/or modify it
+# Invenio OpenID Connect is free software; you can redistribute it and/or modify it
 # under the terms of the MIT License; see LICENSE file for more details.
 
 [aliases]
@@ -20,19 +20,19 @@ universal = 1
 add_ignore = D401
 
 [compile_catalog]
-directory = oarepo_openid_connect/translations/
+directory = invenio_openid_connect/translations/
 
 [extract_messages]
 copyright_holder = CESNET
 msgid_bugs_address = bauer@cesnet.cz
 mapping-file = babel.ini
-output-file = oarepo_openid_connect/translations/messages.pot
+output-file = invenio_openid_connect/translations/messages.pot
 add-comments = NOTE
 
 [init_catalog]
-input-file = oarepo_openid_connect/translations/messages.pot
-output-dir = oarepo_openid_connect/translations/
+input-file = invenio_openid_connect/translations/messages.pot
+output-dir = invenio_openid_connect/translations/
 
 [update_catalog]
-input-file = oarepo_openid_connect/translations/messages.pot
-output-dir = oarepo_openid_connect/translations/
+input-file = invenio_openid_connect/translations/messages.pot
+output-dir = invenio_openid_connect/translations/
