--- a/.travis.yml
+++ b/.travis.yml
@@ -14,41 +14,37 @@ language: python
 
 matrix:
   fast_finish: true
-  allow_failures:
-    # To allow failures, you need to specify the full environment
-    - env: REQUIREMENTS=devel EXTRAS=all,elasticsearch5,postgresql ES_URL=$ES5_DOWNLOAD_URL
-    - env: REQUIREMENTS=devel EXTRAS=all,elasticsearch6,mysql ES_URL=$ES6_DOWNLOAD_URL
 
 cache:
   - pip
 
 env:
   global:
-    - ES5_DOWNLOAD_URL="https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.4.tar.gz"
+    - POSTGRESQL_SQLALCHEMY_DATABASE_URI="postgresql+psycopg2://postgres@localhost:5432/invenio"
     - ES6_DOWNLOAD_URL="https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.2.0.tar.gz"
+    - ES7_DOWNLOAD_URL="https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.5.1-linux-x86_64.tar.gz"
     - ES_HOST=127.0.0.1
   matrix:
-    - REQUIREMENTS=release EXTRAS=all,elasticsearch5,postgresql ES_URL=$ES5_DOWNLOAD_URL DEPLOY=true
-    - REQUIREMENTS=release EXTRAS=all,elasticsearch5,mysql ES_URL=$ES5_DOWNLOAD_URL DEPLOY=true
-    - REQUIREMENTS=release EXTRAS=all,elasticsearch6,postgresql ES_URL=$ES6_DOWNLOAD_URL
-    - REQUIREMENTS=release EXTRAS=all,elasticsearch6,mysql ES_URL=$ES6_DOWNLOAD_URL
-    - REQUIREMENTS=devel EXTRAS=all,elasticsearch5,postgresql ES_URL=$ES5_DOWNLOAD_URL
-    - REQUIREMENTS=devel EXTRAS=all,elasticsearch6,mysql ES_URL=$ES6_DOWNLOAD_URL
+    - REQUIREMENTS=release OAREPO_VERSION=3.1.1 ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES6_DOWNLOAD_URL EXTRAS=sqlite,tests
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES7_DOWNLOAD_URL EXTRAS=postgresql,tests-es7 SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
+    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES7_DOWNLOAD_URL EXTRAS=sqlite,tests-es7
 
 python:
-  - "3.6"
+  - "3.7"
+  - "3.8"
 
 before_install:
-  - "mkdir /tmp/elasticsearch"
-  - "wget -O - $ES_URL | tar xz --directory=/tmp/elasticsearch --strip-components=1"
-  - "/tmp/elasticsearch/bin/elasticsearch &"
-  - "sleep 20"
-  - "nvm install 6; nvm use 6"
   - "travis_retry pip install --upgrade pip setuptools py"
-  - "travis_retry pip install twine wheel coveralls requirements-builder"
-  - "requirements-builder -e $EXTRAS --level=min setup.py > .travis-lowest-requirements.txt"
-  - "requirements-builder -e $EXTRAS --level=pypi setup.py > .travis-release-requirements.txt"
-
+  - "travis_retry pip install twine wheel coveralls requirements-builder pip-tools"
+  - "requirements-builder -e $EXTRAS --level=pypi setup.py > .travis-release-requirements.in"
+  - "pip-compile -U --verbose -o .travis-release-requirements.txt .travis-release-requirements.in"
+  - cat .travis-release-requirements.txt
+  - mkdir /tmp/elasticsearch
+  - wget -O - $ES | tar xz --directory=/tmp/elasticsearch --strip-components=1
+  - "/tmp/elasticsearch/bin/elasticsearch &"
+  - sleep 10
 
 install:
   - "travis_retry pip install -r .travis-${REQUIREMENTS}-requirements.txt"
