Working on travis

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 
 [pytest]
+pep8maxlinelength = 99
 pep8ignore = docs/conf.py ALL
-addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=oarepo_openid_connect --cov-report=term-missing --ignore=setup.py
-testpaths = docs tests oarepo_openid_connect
+addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_openid_connect --cov-report=term-missing --ignore=setup.py
+testpaths = docs tests invenio_openid_connect
