--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ charset = utf-8
 [*.py]
 indent_size = 4
 # isort plugin configuration
-known_first_party = oarepo_openid_connect
+known_first_party = invenio_openid_connect
 multi_line_output = 2
 default_section = THIRDPARTY
 skip = .eggs
