--- a/.travis.yml
+++ b/.travis.yml
@@ -21,18 +21,11 @@ cache:
 env:
   global:
     - POSTGRESQL_SQLALCHEMY_DATABASE_URI="postgresql+psycopg2://postgres@localhost:5432/invenio"
-    - ES6_DOWNLOAD_URL="https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.2.0.tar.gz"
-    - ES7_DOWNLOAD_URL="https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.5.1-linux-x86_64.tar.gz"
-    - ES_HOST=127.0.0.1
   matrix:
-    - REQUIREMENTS=release OAREPO_VERSION=3.1.1 ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES6_DOWNLOAD_URL EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES6_DOWNLOAD_URL EXTRAS=sqlite,tests
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES7_DOWNLOAD_URL EXTRAS=postgresql,tests-es7 SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
-    - REQUIREMENTS=release OAREPO_VERSION=3.2.0 ES=$ES7_DOWNLOAD_URL EXTRAS=sqlite,tests-es7
+    - REQUIREMENTS=release OAREPO_VERSION=3.3.0 EXTRAS=postgresql,tests SQLALCHEMY_DATABASE_URI=$POSTGRESQL_SQLALCHEMY_DATABASE_URI
+    - REQUIREMENTS=release OAREPO_VERSION=3.3.0 EXTRAS=sqlite,tests
 
 python:
-  - "3.7"
   - "3.8"
 
 before_install:
@@ -41,10 +34,6 @@ before_install:
   - "requirements-builder -e $EXTRAS --level=pypi setup.py > .travis-release-requirements.in"
   - "pip-compile -U --verbose -o .travis-release-requirements.txt .travis-release-requirements.in"
   - cat .travis-release-requirements.txt
-  - mkdir /tmp/elasticsearch
-  - wget -O - $ES | tar xz --directory=/tmp/elasticsearch --strip-components=1
-  - "/tmp/elasticsearch/bin/elasticsearch &"
-  - sleep 10
 
 install:
   - "travis_retry pip install -r .travis-${REQUIREMENTS}-requirements.txt"
