--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,21 +6,13 @@
 # under the terms of the MIT License; see LICENSE file for more details.
 
 # Check manifest will not automatically add these two files:
-include .dockerignore
-include .editorconfig
-include .tx/config
-prune docs/_build
+exclude .dockerignore
+exclude .editorconfig
+exclude .tx/config
 recursive-include invenio_openid_connect *.po *.pot *.mo
 
-include *.rst
+include *.md
 exclude *.sh
 include LICENSE
-include pytest.ini
-
-recursive-include docs *.bat
-recursive-include docs *.py
-recursive-include docs *.rst
-recursive-include docs *.txt
-recursive-include docs *.yml
-recursive-include docs Makefile
-recursive-include tests *.py
+exclude pytest.ini
+recursive-exclude tests *.py
