--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,4 @@
 [pytest]
 pep8maxlinelength = 99
 addopts = --pep8 --doctest-glob="*.rst" --doctest-modules --cov=invenio_openid_connect --cov-report=term-missing --ignore=setup.py
-testpaths = docs tests invenio_openid_connect
+testpaths = tests invenio_openid_connect
